improve test arrangements

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -15,6 +15,9 @@
   .btn-blue {
     @apply py-2 px-4 bg-blue-500 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
   }
+  .btn-red {
+    @apply py-2 px-4 bg-red-500 text-white font-semibold rounded-lg shadow-md hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-400 focus:ring-opacity-75;
+  }
   .card {
     @apply bg-white p-5 rounded-lg shadow;
   }
@@ -23,6 +26,21 @@
   }
   .login-input {
     @apply appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white;
+  }
+  .login-content {
+    @apply md:flex md:items-center mb-6;
+  }
+  .login-container {
+    @apply flex flex-col justify-center items-center;
+  }
+  .input-form {
+    @apply shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none;
+  }
+  .label-form {
+    @apply block text-gray-700 text-sm font-bold mb-2;
+  }
+  .alert-text {
+    @apply text-red-500 text-sm;
   }
 }
 @tailwind utilities;
